2010-03-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* inputsrv: added level information (bug fix) [report: Simon Blessing]

2010-02-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.3
	* changed GRIB1 default packing type of spherical harmonics to complex
	* added CDO option -M to indicate that the I/O streams have missing values
	* Version 1.4.3 released

2010-02-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.2
	* Added new module Gridboxstat (testversion)
	* Version 1.4.2 released
	
2010-02-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* netCDF+packed data: check that all values are inside the valid range
	
2010-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remove netCDF offset/scalefactor if option -b 32 is set
	
2010-01-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: don't overwrite existing files

2010-01-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Zonstat: added support for generic grids
	* Merstat: added support for generic grids

2010-01-14  Frank Kaspar <Frank.Kaspar@dwd.de>

	* import_cmsaf: added more corrections for wrong projection parameter

2010-01-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: added support for time constant fields [request: Wei Wei]
	
2010-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Genweights: use netCDF2 (64bit) for large remap weights files [request: Daniel Goll]
	
2010-01-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added module Fourier
	* Detrend: OpenMP parallelization

2009-12-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapcon, remaplaf: speed up by fast store of links

2009-12-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.1 released

2009-12-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Vertint: set default table number to 0
	
2009-12-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: change vlistCompare to func_sftn
	