@@ -109,6 +109,7 @@ doc/tex/mod/Fillmiss -text
 doc/tex/mod/Fldstat -text
 doc/tex/mod/Genweights -text
 doc/tex/mod/Gradsdes -text
+doc/tex/mod/Gridboxstat -text
 doc/tex/mod/Gridcell -text
 doc/tex/mod/Hi -text
 doc/tex/mod/Histogram -text
