@@ -57,4 +57,4 @@ Porting:
      
 Contact:
 
-     Send questions, comments and bug reports to Uwe.Schulzweida@zmaw.de
+     Send questions, comments and bug reports to <http://code.zmaw.de/projects/cdo>
