@@ -11,7 +11,7 @@ License:        GNU GENERAL PUBLIC LICENSE Version 2, June 1991
 Group:          Productivity/Graphics/Visualization/Other
 Requires:       netcdf
 Autoreqprov:    on
-URL:            http://www.mpimet.mpg.de/fileadmin/software/cdo/
+URL:            http://code.zmaw.de/projects/cdo
 Source0:        cdo-%{version}.tar.gz
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 
@@ -27,7 +27,7 @@ Authors:
     Uwe Schulzweida, Uwe.Schulzweida@zmaw.de, is the main author.
     Luis Kornblueh, Luis.Kornblueh@zmaw.de
     Ralf Quast, Ralf.Quast@brockmann-consult.de
-    Send questions, comments and bug reports to Uwe.Schulzweida@zmaw.de
+    Send questions, comments and bug reports to <http://code.zmaw.de/projects/cdo>
 
 
 %prep
