@@ -1227,7 +1227,8 @@ static char *ArithdaysHelp[] = {
     "",
     "DESCRIPTION",
     "    This module multiplies or divides each time step of a dataset with the corresponding",
-    "    days per month or days per year.",
+    "    days per month or days per year. The result of these functions depends on the used",
+    "    calendar of the input data.",
     "",
     "OPERATORS",
     "    muldpm  Multiply with days per month",
@@ -1437,6 +1438,35 @@ static char *MerstatHelp[] = {
     "",
     "PARAMETER",
     "    p  INTEGER  Percentile number in {1, ..., 99}",
+    NULL
+};
+
+static char *GridboxstatHelp[] = {
+    "NAME",
+    "    gridboxmin, gridboxmax, gridboxsum, gridboxmean, gridboxavg, gridboxvar, ",
+    "    gridboxstd - Statistical values over grid boxes",
+    "",
+    "SYNOPSIS",
+    "    <operator>,nx,,ny  ifile ofile",
+    "",
+    "DESCRIPTION",
+    "    This module computes statistical values over surrounding grid boxes.",
+    "    According to the chosen operator the minimum, maximum, sum, average, ",
+    "    variance, or standard deviation of the neighboring grid boxes is written to ofile.",
+    "    All gridbox operators only works on quadrilateral curvilinear grids.",
+    "",
+    "OPERATORS",
+    "    gridboxmin   Gridbox minimum",
+    "    gridboxmax   Gridbox maximum",
+    "    gridboxsum   Gridbox sum",
+    "    gridboxmean  Gridbox mean",
+    "    gridboxavg   Gridbox average",
+    "    gridboxvar   Gridbox variance",
+    "    gridboxstd   Gridbox standard deviation",
+    "",
+    "PARAMETER",
+    "    nx  INTEGER  Number of grid boxes in x direction",
+    "    ny  INTEGER  Number of grid boxes in y direction",
     NULL
 };
 
@@ -3580,8 +3610,8 @@ static char *EcaGslHelp[] = {
     "    Let ifile1 be a time series of daily mean temperatures TG,",
     "    and ifile2 be a land-water mask.",
     "    Within a period of 12 months, the thermal growing season length is officially defined as the number of days between:",
-    "    - frist occurrence of at least nday consecutive days with TG > T within the first 6 months",
-    "    - first occurrence of at least nday consecutive days with TG < T within the last 6 months",
+    "    - frist occurrence of at least nday consecutive days with TG $>$ T within the first 6 months",
+    "    - first occurrence of at least nday consecutive days with TG $<$ T within the last 6 months",
     "    On northern hemispere, this period corresponds with the regular year, whereas",
     "    on southern hemispere, it starts at july $1^{st}$. Please note, that this",
     "    definition may lead to weird results concerning values TG = T: In the first",
