@@ -1,3 +1,7 @@
+2010-03-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* Released module Gridboxstat
+	
 2010-03-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* inputsrv: added level information (bug fix) [report: Simon Blessing]
